--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Photos#show</h1>
 <p>Find me in app/views/photos/show.html.erb</p>
 
-<%= image_tag(@photo.url) %>
+<div class="gameboard">
+  <%= image_tag(@photo.url) %>
+</div>
