--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Photos#show</h1>
 <p>Find me in app/views/photos/show.html.erb</p>
 
-<div class="gameboard">
+<div id="photo-div">
   <%= image_tag(@photo.url) %>
 </div>
